--- a/backOffice.html
+++ b/backOffice.html
@@ -56,6 +56,8 @@
           </div>
         </div>
 
+        <input type="hidden" id="productId" />
+
         <div class="text-end">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
