input Id back office

--- a/backOffice.html
+++ b/backOffice.html
@@ -49,10 +49,17 @@
           />
         </div>
 
-        <div class="mb-5">
+        <div class="mb-3">
           <div class="input-group">
             <span class="input-group-text">$</span>
             <input type="text" class="form-control" aria-describedby="basic-addon3 basic-addon4" id="price" />
+          </div>
+        </div>
+
+        <div class="mb-5">
+          <div class="input-group d-none">
+            <span class="input-group-text">ID</span>
+            <input type="text" class="form-control" aria-describedby="basic-addon3 basic-addon4" id="productId" />
           </div>
         </div>
 
