--- a/homePage.html
+++ b/homePage.html
@@ -14,7 +14,10 @@
   <body>
     <header class="container">
       <div class="text-end my-5">
-        <button class="btn btn-success" id="switchMode">Admin Mode</button>
+        <button class="btn btn-success fw-bold" id="switchMode">Admin Mode</button>
+        <button class="btn btn-primary d-none" id="changePage">
+          <a class="link-light link-underline link-underline-opacity-0 fw-bold" href="./backOffice.html">Back Office</a>
+        </button>
       </div>
     </header>
     <div class="container mt-5">
